Fixed some of the aligning on the layout

--- a/styles.css
+++ b/styles.css
@@ -377,13 +377,13 @@ h1:hover {
 
 @keyframes bounceIn {
   0% {
-    transform: scale(0.8);
+    transform: scale(0.7);
   }
   60% {
-    transform: scale(1.1);
+    transform: scale(1.0);
   }
   100% {
-    transform: scale(0.9);
+    transform: scale(0.8);
   }
 }
 
@@ -442,10 +442,11 @@ nav {
 }
 
 .nav-bar a.icon {
-  background: black;
+  background-color: black;
   display: block;
   position: absolute;
   font-size: 18px;
+  color: #FFF;
   right: 0;
   top: 0;
   transition: all 250ms;
@@ -454,7 +455,7 @@ nav {
   background-color: #000;
   color: #9da0ff;
   transform: scale(1.1);
-  animation: spin 2s alternate;
+  animation: spin 1s infinite 250ms alternate;
   z-index: 7;
 }
 
@@ -465,11 +466,15 @@ nav {
   z-index: 8;
 }
 
+
 @keyframes spin {
-  from {
+  0% {
       transform:rotate(0deg);
   }
-  to {
+  50% {
+      transform: rotate(90deg);
+  }
+  100% {
       transform:rotate(180deg);
   }
 }
@@ -489,7 +494,7 @@ nav {
 }
 
 
-/* CONTAINER */
+/* MASTER CONTAINER */
 
 .master-container {
     background-color: #4c1c46;
@@ -497,46 +502,53 @@ nav {
 
 /* ABOUT ME STYLES */
 
+.aboutme-grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 20px;
+  background-image: linear-gradient(
+    to bottom, transparent, #4c1c46
+  ), url("images/purple-galaxy-wallpaper.jpg");
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  text-shadow: 2px 2px 0px #000;
+  padding-top: 80px; 
+  } 
+
+  .intro-col {
+   color: #fff;
+   grid-column: 2 / 6;
+  }
+
 .propic {
-  width: 250px;
-  height: auto;
+  width: 14rem;
   border-radius: 10%;
   border: 4px solid #a296ca;
   box-shadow: 2px 5px 10px #000;
-  align-self: center;
+}
+
+.pic-wrapper {
+  text-align: center;
 }
 
 .title-2 {
-   margin-top: -20px;
    color: #a296ca;
    text-shadow: 2px 2px 0px #4c1c46;
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    background-image: linear-gradient(
-      to bottom, transparent, #4c1c46
-    ), url("images/purple-galaxy-wallpaper.jpg");
-    background-size: cover;
-    color: #fff;
-    text-shadow: 2px 2px 0px #000;
-    padding-top: 25px;
-    } 
-
-   .column {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-    color: #fff;
-    padding: 30px 25px 60px;
-    align-self: center;
-  }
+  .aboutme-col {
+   color: #fff;
+   grid-column: 6 / 12;
+   align-self: center;
+ }
 
   /* TECHNICAL SKILLS STYLES */
+
+  .skillz-col {
+    color: #fff;
+    padding: 25px 25px;
+  }
 
   .skillz {
     display: grid;
@@ -600,7 +612,7 @@ nav {
       to bottom, transparent, #000
     ), url("images/galaxyblue.jpg");
     background-size: cover;
-    padding: 200px 0;
+    padding: 100px 0;
     justify-content: space-evenly;
 }
 
@@ -619,7 +631,7 @@ nav {
 
 .overlay:hover {
   background-color: rgb(255, 255, 255);
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 
 footer {
@@ -631,13 +643,12 @@ footer {
 
 @media screen and (max-width: 800px) {
 
- .master-container {
+  .aboutme-grid {
+    display: flex;
     flex-direction: column;
-    align-content: center;
   }
-
-  .row {
-    flex-direction: column;
+  .aboutme-grid p {
+    padding: 0 25px;
   }
 
   .portfolio-grid {
@@ -645,34 +656,26 @@ footer {
   }
 
   .skillz {
-    grid-template: repeat(6, 1fr) / repeat(3, 1fr);
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
     grid-gap: 20px;
   }
 }
 @media screen and (max-width: 550px) {
   .contact {
+    display: flex;
     flex-direction: column;
-    align-items: center;  
+    align-items: center;
 }
 
   .overlay {
-    margin: 25px 0;
+    margin: 25px 0 ;
   }
-  .nav-links {
-    float: left;
-  }
+
 }
 
 @media screen and (max-width: 400px) {
-  .master-container {
-    overflow: hidden;
-    max-width: 100%;
-    min-width: 375px;
-  }
-  footer {
-    min-width: 375px;
-    overflow: hidden;
-    max-width: 100%;
+  html {
+      min-width: 400px;
   }
 
 }
